<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_Component_TE2_HMI_Link" Id="{239d93ca-e4c5-49e8-ac9a-7b4eeeacb70c}">
    <Declaration><![CDATA[TYPE ST_Component_TE2_HMI_Link EXTENDS ST_BaseComponent_HMI_Link :
STRUCT
	stComponent_TE2		: ST_Component_TE2_HMI;
	
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>